--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "flatpickr": "^4.6.13",
     "izitoast": "^1.4.0",
     "lightbox": "^0.5.0",
+    "pixabay-api": "^1.0.4",
     "simplelightbox": "^2.14.3",
     "vite-plugin-full-reload": "^1.0.5",
     "vite-plugin-html-inject": "^1.0.1"
